<resources>
    <string name="app_name">Sport Analytic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="main_menu">Menu</string>
    <string name="user_options">User options</string>
    <string name="data_edit">Data edit</string>
    <string name="logout_message">You are logout, and local DB is deleted</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration_message">Register if you don\'t have account yet.</string>
    <string name="register">Register</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="position">Position</string>
    <string name="admin">admin</string>
    <string name="user">user</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="reports">Reports</string>
    <string name="save">Save</string>
    <string name="choose_location">Choose location</string>
    <string name="main_fragment">main fragment</string>
    <string name="location_is">Location is: </string>
    <string name="location_is_unknown">Location is unknown, please go to location option and define location!</string>
    <string name="edit_name">Name</string>
    <string name="description">Description</string>
    <string name="insert">Insert</string>
    <string name="product_categories">Product categories</string>
    <string name="product">Product</string>
    <string name="cancel">Cancel</string>
    <string name="prefix">Prefix</string>
    <string name="suffix">Suffix</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="reservations">Reservations</string>
    <string name="close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="product_list">%1$s</string>
    <string name="no_created_product">No created products!!</string>
    <string name="x">X</string>
    <string name="choose_products">Choose products for reservation</string>
    <string name="products">Products:&#160;</string>
    <string name="txt_from">From:&#160;</string>
    <string name="txt_to">To:&#160;</string>
    <string name="txt_description">Description:&#160;</string>

    <string name="succesfuly_register">Registration on device is completed. Wait till your company managers approve your account!</string>
    <string name="location_message">Please choose location before work another else!!</string>
    <string name="admin_alert">This option is only enable for administrator</string>
    <string name="product_create_options">Product create options</string>
    <string name="product_options">1. Create one by one product
        2. Create multiple products with different prefix or suffix</string>
    <string name="first_product_option">One</string>
    <string name="second_product_option">Multiple</string>
    <string name="multiple_products_create">Multiple products create</string>
    <string name="reservation_is_not_full">Reservation can be made because some element missing. Please input all element.</string>

    <string-array name="data_edit_array">
        <item name="data_edit">Locations</item>
        <item name="data_edit">Product Categories</item>
        <item name="data_edit">Products</item>
    </string-array>

    <string name="invalid_email_or_password">Invalid Email or Password!</string>
</resources>
